cartopy/docs/v0.16/_sources/gallery/index.rst.txt
:orphan:



Cartopy Gallery
---------------

The following visual examples demonstrate some of the functionality of
Cartopy, particularly its matplotlib interface.

For a structured introduction to cartopy, including some of these
examples, see :ref:`getting-started-with-cartopy`.



Lines and polygons
------------------

.. container:: gallery_images


    .. raw:: html
    
        <div class="sphx-glr-thumbcontainer" tooltip="Visualize Tissot&#x27;s indicatrix on a map.">
    
    .. only:: html
    
        .. figure:: /gallery/images/thumb/sphx_glr_tissot_thumb.png
    
            :ref:`sphx_glr_gallery_tissot.py`
    
    .. raw:: html
    
        </div>
    
    
    .. toctree::
       :hidden:
    
       /gallery/tissot
    
    
    .. raw:: html
    
        <div class="sphx-glr-thumbcontainer" tooltip="A demonstration of some of the built-in Natural Earth features found in cartopy.">
    
    .. only:: html
    
        .. figure:: /gallery/images/thumb/sphx_glr_features_thumb.png
    
            :ref:`sphx_glr_gallery_features.py`
    
    .. raw:: html
    
        </div>
    
    
    .. toctree::
       :hidden:
    
       /gallery/features
    
    
    .. raw:: html
    
        <div class="sphx-glr-thumbcontainer" tooltip="An example of a simple map that compares Geodetic and Plate Carree lines between two locations.">
    
    .. only:: html
    
        .. figure:: /gallery/images/thumb/sphx_glr_global_map_thumb.png
    
            :ref:`sphx_glr_gallery_global_map.py`
    
    .. raw:: html
    
        </div>
    
    
    .. toctree::
       :hidden:
    
       /gallery/global_map
    
    
    .. raw:: html
    
        <div class="sphx-glr-thumbcontainer" tooltip="A demonstration of the way a box is warped when it is defined in a rotated pole coordinate syst...">
    
    .. only:: html
    
        .. figure:: /gallery/images/thumb/sphx_glr_rotated_pole_thumb.png
    
            :ref:`sphx_glr_gallery_rotated_pole.py`
    
    .. raw:: html
    
        </div>
    
    
    .. toctree::
       :hidden:
    
       /gallery/rotated_pole
    
    
    .. raw:: html
    
        <div class="sphx-glr-thumbcontainer" tooltip="This example manually instantiates a :class:`cartopy.feature.NaturalEarthFeature` to access adm...">
    
    .. only:: html
    
        .. figure:: /gallery/images/thumb/sphx_glr_feature_creation_thumb.png
    
            :ref:`sphx_glr_gallery_feature_creation.py`
    
    .. raw:: html
    
        </div>
    
    
    .. toctree::
       :hidden:
    
       /gallery/feature_creation
    
    
    .. raw:: html
    
        <div class="sphx-glr-thumbcontainer" tooltip="This example demonstrates how a custom shape geometry may be used instead of the projection&#x27;s d...">
    
    .. only:: html
    
        .. figure:: /gallery/images/thumb/sphx_glr_always_circular_stereo_thumb.png
    
            :ref:`sphx_glr_gallery_always_circular_stereo.py`
    
    .. raw:: html
    
        </div>
    
    
    .. toctree::
       :hidden:
    
       /gallery/always_circular_stereo
    
    
    .. raw:: html
    
        <div class="sphx-glr-thumbcontainer" tooltip="This example uses the power of Shapely to illustrate states that are likely to have been signif...">
    
    .. only:: html
    
        .. figure:: /gallery/images/thumb/sphx_glr_hurricane_katrina_thumb.png
    
            :ref:`sphx_glr_gallery_hurricane_katrina.py`
    
    .. raw:: html
    
        </div>
    
    
    .. toctree::
       :hidden:
    
       /gallery/hurricane_katrina
    
    
    .. raw:: html
    
        <div class="sphx-glr-thumbcontainer" tooltip="This example demonstrates the effect of referencing your data to an incorrect ellipse.">
    
    .. only:: html
    
        .. figure:: /gallery/images/thumb/sphx_glr_effects_of_the_ellipse_thumb.png
    
            :ref:`sphx_glr_gallery_effects_of_the_ellipse.py`
    
    .. raw:: html
    
        </div>
    
    
    .. toctree::
       :hidden:
    
       /gallery/effects_of_the_ellipse
    
    .. raw:: html

        <div style='clear:both'></div>



Scalar data
-----------

.. container:: gallery_images


    .. raw:: html
    
        <div class="sphx-glr-thumbcontainer" tooltip="An example of contourf on manufactured data.">
    
    .. only:: html
    
        .. figure:: /gallery/images/thumb/sphx_glr_waves_thumb.png
    
            :ref:`sphx_glr_gallery_waves.py`
    
    .. raw:: html
    
        </div>
    
    
    .. toctree::
       :hidden:
    
       /gallery/waves
    
    
    .. raw:: html
    
        <div class="sphx-glr-thumbcontainer" tooltip="This example demonstrates Cartopy&#x27;s ability to project images into the desired projection on-th...">
    
    .. only:: html
    
        .. figure:: /gallery/images/thumb/sphx_glr_geostationary_thumb.png
    
            :ref:`sphx_glr_gallery_geostationary.py`
    
    .. raw:: html
    
        </div>
    
    
    .. toctree::
       :hidden:
    
       /gallery/geostationary
    
    
    .. raw:: html
    
        <div class="sphx-glr-thumbcontainer" tooltip="Demonstrates cartopy&#x27;s ability to draw map tiles which are downloaded on demand from the Stamen...">
    
    .. only:: html
    
        .. figure:: /gallery/images/thumb/sphx_glr_eyja_volcano_thumb.png
    
            :ref:`sphx_glr_gallery_eyja_volcano.py`
    
    .. raw:: html
    
        </div>
    
    
    .. toctree::
       :hidden:
    
       /gallery/eyja_volcano
    
    
    .. raw:: html
    
        <div class="sphx-glr-thumbcontainer" tooltip="The National Oceanic and Atmospheric Administration (NOAA) monitors the solar wind conditions u...">
    
    .. only:: html
    
        .. figure:: /gallery/images/thumb/sphx_glr_aurora_forecast_thumb.png
    
            :ref:`sphx_glr_gallery_aurora_forecast.py`
    
    .. raw:: html
    
        </div>
    
    
    .. toctree::
       :hidden:
    
       /gallery/aurora_forecast
    
    .. raw:: html

        <div style='clear:both'></div>



Vector data
-----------

.. container:: gallery_images


    .. raw:: html
    
        <div class="sphx-glr-thumbcontainer" tooltip="Generating a vector-based streamplot.">
    
    .. only:: html
    
        .. figure:: /gallery/images/thumb/sphx_glr_streamplot_thumb.png
    
            :ref:`sphx_glr_gallery_streamplot.py`
    
    .. raw:: html
    
        </div>
    
    
    .. toctree::
       :hidden:
    
       /gallery/streamplot
    
    
    .. raw:: html
    
        <div class="sphx-glr-thumbcontainer" tooltip="Plotting barbs.">
    
    .. only:: html
    
        .. figure:: /gallery/images/thumb/sphx_glr_barbs_thumb.png
    
            :ref:`sphx_glr_gallery_barbs.py`
    
    .. raw:: html
    
        </div>
    
    
    .. toctree::
       :hidden:
    
       /gallery/barbs
    
    
    .. raw:: html
    
        <div class="sphx-glr-thumbcontainer" tooltip="Plotting arrows.">
    
    .. only:: html
    
        .. figure:: /gallery/images/thumb/sphx_glr_arrows_thumb.png
    
            :ref:`sphx_glr_gallery_arrows.py`
    
    .. raw:: html
    
        </div>
    
    
    .. toctree::
       :hidden:
    
       /gallery/arrows
    
    
    .. raw:: html
    
        <div class="sphx-glr-thumbcontainer" tooltip="This example demonstrates the regridding functionality in quiver (there exists equivalent funct...">
    
    .. only:: html
    
        .. figure:: /gallery/images/thumb/sphx_glr_regridding_arrows_thumb.png
    
            :ref:`sphx_glr_gallery_regridding_arrows.py`
    
    .. raw:: html
    
        </div>
    
    
    .. toctree::
       :hidden:
    
       /gallery/regridding_arrows
    
    .. raw:: html

        <div style='clear:both'></div>



Web services
------------

.. container:: gallery_images


    .. raw:: html
    
        <div class="sphx-glr-thumbcontainer" tooltip="This example demonstrates the interactive pan and zoom capability supported by an OGC web servi...">
    
    .. only:: html
    
        .. figure:: /gallery/images/thumb/sphx_glr_wms_thumb.png
    
            :ref:`sphx_glr_gallery_wms.py`
    
    .. raw:: html
    
        </div>
    
    
    .. toctree::
       :hidden:
    
       /gallery/wms
    
    
    .. raw:: html
    
        <div class="sphx-glr-thumbcontainer" tooltip="This example demonstrates how imagery from a tile providing web service can be accessed.">
    
    .. only:: html
    
        .. figure:: /gallery/images/thumb/sphx_glr_image_tiles_thumb.png
    
            :ref:`sphx_glr_gallery_image_tiles.py`
    
    .. raw:: html
    
        </div>
    
    
    .. toctree::
       :hidden:
    
       /gallery/image_tiles
    
    
    .. raw:: html
    
        <div class="sphx-glr-thumbcontainer" tooltip="This example demonstrates the interactive pan and zoom capability supported by an OGC web servi...">
    
    .. only:: html
    
        .. figure:: /gallery/images/thumb/sphx_glr_wmts_thumb.png
    
            :ref:`sphx_glr_gallery_wmts.py`
    
    .. raw:: html
    
        </div>
    
    
    .. toctree::
       :hidden:
    
       /gallery/wmts
    
    
    .. raw:: html
    
        <div class="sphx-glr-thumbcontainer" tooltip="This example displays imagery from a web map tile service on two different projections, one of ...">
    
    .. only:: html
    
        .. figure:: /gallery/images/thumb/sphx_glr_reprojected_wmts_thumb.png
    
            :ref:`sphx_glr_gallery_reprojected_wmts.py`
    
    .. raw:: html
    
        </div>
    
    
    .. toctree::
       :hidden:
    
       /gallery/reprojected_wmts
    
    
    .. raw:: html
    
        <div class="sphx-glr-thumbcontainer" tooltip="This example further demonstrates WMTS support within cartopy. Optional keyword arguments can b...">
    
    .. only:: html
    
        .. figure:: /gallery/images/thumb/sphx_glr_wmts_time_thumb.png
    
            :ref:`sphx_glr_gallery_wmts_time.py`
    
    .. raw:: html
    
        </div>
    
    
    .. toctree::
       :hidden:
    
       /gallery/wmts_time
    
    .. raw:: html

        <div style='clear:both'></div>



Miscellanea
-----------

.. container:: gallery_images


    .. raw:: html
    
        <div class="sphx-glr-thumbcontainer" tooltip="This example demonstrates how to modify the boundary/neatline of an axes. We construct a star w...">
    
    .. only:: html
    
        .. figure:: /gallery/images/thumb/sphx_glr_star_shaped_boundary_thumb.png
    
            :ref:`sphx_glr_gallery_star_shaped_boundary.py`
    
    .. raw:: html
    
        </div>
    
    
    .. toctree::
       :hidden:
    
       /gallery/star_shaped_boundary
    
    
    .. raw:: html
    
        <div class="sphx-glr-thumbcontainer" tooltip="This example displays all 60 zones of the Universal Transverse Mercator projection next to each...">
    
    .. only:: html
    
        .. figure:: /gallery/images/thumb/sphx_glr_utm_all_zones_thumb.png
    
            :ref:`sphx_glr_gallery_utm_all_zones.py`
    
    .. raw:: html
    
        </div>
    
    
    .. toctree::
       :hidden:
    
       /gallery/utm_all_zones
    
    
    .. raw:: html
    
        <div class="sphx-glr-thumbcontainer" tooltip="The actual code to produce cartopy&#x27;s logo.">
    
    .. only:: html
    
        .. figure:: /gallery/images/thumb/sphx_glr_logo_thumb.png
    
            :ref:`sphx_glr_gallery_logo.py`
    
    .. raw:: html
    
        </div>
    
    
    .. toctree::
       :hidden:
    
       /gallery/logo
    
    
    .. raw:: html
    
        <div class="sphx-glr-thumbcontainer" tooltip="The actual code to generate cartopy&#x27;s favicon.">
    
    .. only:: html
    
        .. figure:: /gallery/images/thumb/sphx_glr_favicon_thumb.png
    
            :ref:`sphx_glr_gallery_favicon.py`
    
    .. raw:: html
    
        </div>
    
    
    .. toctree::
       :hidden:
    
       /gallery/favicon
    
    
    .. raw:: html
    
        <div class="sphx-glr-thumbcontainer" tooltip="This example demonstrates adding tick labels to maps on rectangular projections using special t...">
    
    .. only:: html
    
        .. figure:: /gallery/images/thumb/sphx_glr_tick_labels_thumb.png
    
            :ref:`sphx_glr_gallery_tick_labels.py`
    
    .. raw:: html
    
        </div>
    
    
    .. toctree::
       :hidden:
    
       /gallery/tick_labels
    
    
    .. raw:: html
    
        <div class="sphx-glr-thumbcontainer" tooltip="This example demonstrates plotting data on an eccentric ellipse. The data plotted is a topograp...">
    
    .. only:: html
    
        .. figure:: /gallery/images/thumb/sphx_glr_eccentric_ellipse_thumb.png
    
            :ref:`sphx_glr_gallery_eccentric_ellipse.py`
    
    .. raw:: html
    
        </div>
    
    
    .. toctree::
       :hidden:
    
       /gallery/eccentric_ellipse
    
    
    .. raw:: html
    
        <div class="sphx-glr-thumbcontainer" tooltip="This example demonstrates how to use cartopy `GeoAxes` with `AxesGrid` from the `mpl_toolkits.a...">
    
    .. only:: html
    
        .. figure:: /gallery/images/thumb/sphx_glr_axes_grid_basic_thumb.png
    
            :ref:`sphx_glr_gallery_axes_grid_basic.py`
    
    .. raw:: html
    
        </div>
    
    
    .. toctree::
       :hidden:
    
       /gallery/axes_grid_basic
    
    
    .. raw:: html
    
        <div class="sphx-glr-thumbcontainer" tooltip="Produces a map showing London Underground station locations with high resolution background ima...">
    
    .. only:: html
    
        .. figure:: /gallery/images/thumb/sphx_glr_tube_stations_thumb.png
    
            :ref:`sphx_glr_gallery_tube_stations.py`
    
    .. raw:: html
    
        </div>
    
    
    .. toctree::
       :hidden:
    
       /gallery/tube_stations
    
    
    .. raw:: html
    
        <div class="sphx-glr-thumbcontainer" tooltip="A demonstration of the power of Matplotlib combined with cartopy&#x27;s Azimuthal Equidistant projec...">
    
    .. only:: html
    
        .. figure:: /gallery/images/thumb/sphx_glr_un_flag_thumb.png
    
            :ref:`sphx_glr_gallery_un_flag.py`
    
    .. raw:: html
    
        </div>
    
    
    .. toctree::
       :hidden:
    
       /gallery/un_flag
    
    .. raw:: html

        <div style='clear:both'></div>



.. container:: sphx-glr-footer


  .. container:: sphx-glr-download

    :download:`Download all examples in Python source code: gallery_python.zip <//Users/pelson/dev/scitools/cartopy/docs/source/gallery/gallery_python.zip>`



  .. container:: sphx-glr-download

    :download:`Download all examples in Jupyter notebooks: gallery_jupyter.zip <//Users/pelson/dev/scitools/cartopy/docs/source/gallery/gallery_jupyter.zip>`

.. rst-class:: sphx-glr-signature

    `Generated by Sphinx-Gallery <https://sphinx-gallery.readthedocs.io>`_
